# silex_maya

./: .ass  .gitignore  Pipfile  README.md  package.py  setup.cfg  setup.py
config/action/: build.yaml  proposal.yaml  save.yaml  try.yaml
config/publish/: abc.yaml  fbx.yaml  obj.yaml  obj_copy.yaml  vrscene.yaml
script/: build.py
silex_maya/cli/: parser.py
silex_maya/commands/: build.py  build_arnold_cmd.py  build_kick_cmd.py  capture_preview.py  cleanup_scene.py  compute_output_path.py  conform_ma.py  create_cube.py  export_abc.py  export_ass.py  export_fbx.py  export_ma.py  export_obj.py  export_vrmesh.py  export_vrscene.py  export_xgen.py  get_references.py  import_ref.py  load_plugin.py  open.py  open_conform.py  reference.py  save.py  screenshot.py  set_attributes.py  set_references.py  upload_preview.py
silex_maya/commands/check/: check_ngones.py
silex_maya/commands/info/: get_animation_frame_range.py
silex_maya/config/action/: build.yaml  demo_async.yaml  import.yaml  import_ref.yaml  increment_and_save.yaml  proposal.yaml  quality_check.yaml  reference.yaml  save.yaml  set-context.yml
silex_maya/config/bundle/: ma.yaml
silex_maya/config/conform/: ma.yaml  ma.yml
silex_maya/config/publish/: abc.yaml  ass.yaml  fbx.yaml  ma.yaml  obj.yaml  vrmesh.yaml  vrscene.yaml  xgen.yaml
silex_maya/config/submit/: arnold.yml  maya.yml
silex_maya/utils/: constants.py  dialogs.py  preview.py  scene.py  thread.py  utils.py
startup/: create_shelf.py  custom_save.py  load_plugins.py  userSetup.py
