[metadata]
name = silex_maya
description = Python library to execution silex actions on maya
long_description = file: README.mb
keywords = silex, vfx, rez, maya
author = Artfx TD gang
author_email = td@artfx.fr
url = https://artfx.school/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    silex_client @ git+https://github.com/ArtFXDev/silex_client.git

[options.extras_require]
dev =
    wheel
